<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="action_chooser_file">Choose file</string>
    <string name="action_chooser_dir">Choose dir</string>
    <string name="action_full_text">Full Text</string>
    <string name="action_settings">Settings</string>
    <string name="action_sw_success">" written with success"</string>
    <string name="add_picture">Add picture</string>
    <string name="add_word">Add translate</string>
    <string name="answers">Correct answers</string>
    <string name="app_name" translatable="false">School Manager</string>
    <string name="cancel">Cancel</string>
    <string name="chapter_file">Save content into it\'s own file</string>
    <string name="choose_dir">Directory successfully changed.</string>
    <string name="continue_delete">Do you really want to delete the selected items?</string>
    <string name="cut">Cut</string>
    <string name="data_child_count">"Elements: %1$d"</string>
    <string name="data_children_sf">"Elements: %1$d, Success rate: %2$d%3$s"</string>
    <string name="data_search_time">"Elements: %1$d;\tTime: %2$dms"</string>
    <string name="data_desc">Description</string>
    <string name="data_file">Separated file</string>
    <string name="data_image">Image</string>
    <string name="data_name">Name</string>
    <string name="data_translate">Translation</string>
    <string name="data_translations">Translations</string>
    <string name="delete">Delete</string>
    <string name="dir_import">Import subjects</string>
    <string name="dir_set_subjdir">Set source</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="exception_handler">"An unexpected failure occurred in the last session.
        \nPlease copy the information about this error and send it to the creator.
        \nCause: "</string>
    <string name="exception_warning">An error happened, please restart the app</string>
    <string name="fail_cf_name_length">Name can\'t be longer than 150 characters!</string>
    <string name="fail_cf_name_typo">Name can\'t contain /|\:"?*§$[]</string>
    <string name="fail_find">Failed to find path:</string>
    <string name="fail_formatter">Setting default path.</string>
    <string name="fail_load">Failed to load file:</string>
    <string name="fail_load_src">"while loading data of: "</string>
    <string name="fail_no_objects">No objects of this type were found</string>
    <string name="fail_parent">"parent: "</string>
    <string name="fail_permission_write">"Storage access was necessary to use this dir: "</string>
    <string name="fail_ref_msg">"Unknown reference: "</string>
    <string name="fail_save">Failed to save file:</string>
    <string name="fail_save_src">"while saving data of: "</string>
    <string name="fail_sr_msg">Wrong syntax in line:</string>
    <string name="fail_type">", of type: "</string>
    <string name="help">Help</string>
    <string name="help_create">Items creation</string>
    <string name="help_create_ch">Chapters</string>
    <string name="help_create_ch_how">Chapters are created from the \'more\' menu.
        \nThey have only the basic information as well, but in addition to that, they have an option to have their own file, where all items inside them will be saved (used for quicker load when there are many items stored, e. g. 100 words).</string>
    <string name="help_create_how">All items created from the \'more\' menu (all except References) in the top right corner have two columns for name of the new item and for its description (optional).
        \nThe description of the item can be multiline.
        \nAfter you are done with these two colums, there can be more stuff for each different type of item.
        \nWhen you are done with all that information, click \'OK\' to create the item, or whenever you want to cancel the action click \'Cancel\' or click outside the window to exit the dialog.</string>
    <string name="help_create_mch">Subjects</string>
    <string name="help_create_mch_how">Subjects are created from the \'more\' menu.
        \nThey have just the basic information described above.
        \nDirectory of the created subject will be called after the specified name, therefore the name can contain only file usable characters.</string>
    <string name="help_create_pic">Pictures</string>
    <string name="help_create_pic_how">Pictures are created from the \'more\' menu.
        \nOther than the basic information they contain an \'Add image\' button, which brings up an image chooser.
        \nAfter selecting an image to add, there will be added an image item consisting of its name and the image itself.
        \nIn decision to remove any image, click on the red cross on the right of the name of that image.</string>
    <string name="help_create_ref">References</string>
    <string name="help_create_ref_how">References are created using \'Reference\' button in selecting mode.
        \nAfter selecting items to reference click the \'Reference\' button, then find the chapter you want to put it in and click the \'Paste\' button.
        \nThese objects can\'t be edited, only removed, but they refer to any other type of item except Subjects and References.</string>
    <string name="help_create_word">Words</string>
    <string name="help_create_word_how">Words are created from the \'more\' menu.
        \nOther than the basic information they contain an \'Add translate\' button, which adds a translate item bellow.
        \nTranslates consist of name and optional description.
        \nIn decision to remove any translate, click on the red cross on the right of the specified translate.</string>
    <string name="help_extra">More useful functions</string>
    <string name="help_extra_how">This application has some more functions that can sometimes help. Here is the list and explanation of them.</string>
    <string name="help_extra_import_mch">Subjects import</string>
    <string name="help_extra_import_mch_how">If you want to use some external subject folders, this is the way to go.
        \nFor external subjects import select more options and than \'Import subject\'.
        \nYou can select multiple subject folders at a time.
        \nAfter selecting desired subject folders, click \'Import\'.
        \nRemove them from the list by tapping on the red button on the right side.</string>
    <string name="help_extra_naming">Naming convention</string>
    <string name="help_extra_naming_how">If you have similar names of certain words, and they have identical translations, combine them using these: /().
        \nSlash character signals two different options ending by a whitespace, an interpunction character or a bracket.
        \nExamples:
        \nI/They come = \'I come\' or \'They come\'
        \n(I go)/(He goes). = \'I go.\' or \'He goes\'.</string>
    <string name="help_extra_sch_import">File chapter import</string>
    <string name="help_extra_sch_import_how">File chapters can be added using \'Add chapter from file\' button found in the more options menu.
        \nSelect the file of the desired chapter, written in JSON format, and it will be added into the currently opened location of a subject.
        \nAny pictures or file chapters included in the loaded file have to be copied manually.
        \nIt is highly recommended not to import subject files.</string>
    <string name="help_extra_words_export">Words exporting</string>
    <string name="help_extra_words_export_how">Export words by opening a chapter which content you want to export and select \'Export words\' option in the more options menu.          Than just select the file you want to add the current word content in.          The exported words can be imported again without loss.</string>
    <string name="help_extra_words_import">Words importing</string>
    <string name="help_extra_words_import_how">You can import words from a file, it can be also structured in a simpler hierarchy. The file can contain chapters and words.
        \nDescription to individual items can be written directly behind the item in format like \'[description]\'.
        \nWords and translates can be separated using \';\', \'=\', or \'→\'.
        \nWords with same translate are separated by a backward slash \'\\\'.
        \nChapters begin on a separate line in the following format \'chapter name [optional description] {\', end them with a single \'}\' on a separate line. For saving the chapter into an etra file, use \'§\' directly before \'{\'.
        \nEvery item should be written on a new line, spacing and indentation between them is ignored - meant only for better readability.
        \nPossible format example:
        \n\nchapter-in-file 1 §{
        \n\tword 1;translate 1
        \n\tword 2=translate 2
        \n\tsubchapter name [subchapter description] {
        \n\t\tword 3 [description] = translate 3
        \n\t\tword 4\\word 5;translate 4
        \n\t\tword 6 [description] \\ word 7 → translate 5
        \n\t}
        \n\tword 7;translate 1 [description]\\translate 6
        \n}</string>
    <string name="help_search">Searching</string>
    <string name="help_search_how">Searching is enabled in all chapters and subjects.
        \nTyped text is kept in the search field even when it\'s not visible.
        \nThere are various methods for searching, the search engine accepts naming syntax.</string>
    <string name="help_search_regex">Regex syntax</string>
    <string name="help_search_regex_char_class">"Char Class\n[abc]\n[^abc]\n[a-zA-Z]\n[a-d[m-p]]\n[a-z&amp;&amp;[def]]\n[a-z&amp;&amp;[^bc]]\n[a-z&amp;&amp;[^m-p]]"</string>
    <string name="hierarchy_ch">Chapter</string>
    <string name="hierarchy_picture">Picture</string>
    <string name="hierarchy_word">Word</string>
    <string name="menu_about">About</string>
    <string name="menu_choose_dir">Choose source</string>
    <string name="menu_objects">Subjects</string>
    <string name="menu_settings">Options</string>
    <string name="more_clean">Clean database</string>
    <string name="more_export_word">Export word file</string>
    <string name="more_import_sch">Add chapter from file</string>
    <string name="more_import_word">Import word file</string>
    <string name="more_new">New</string>
    <string name="more_sf_reval_mch">Recount success rate</string>
    <string name="objects_cancel">Cancel</string>
    <string name="paste">Paste</string>
    <string name="search">Input Keyword</string>
    <string name="select_ref">Reference</string>
    <string name="setts_him_allflip">Translate all words on every click</string>
    <string name="setts_him_flipped">Translate words automatically</string>
    <string name="setts_him_parse">Display item names parsed</string>
    <string name="setts_interface">Interface</string>
    <string name="setts_test_amount">Default tested amount</string>
    <string name="setts_test_clever">Make tests by success rate</string>
    <string name="setts_test_time">Default time per item</string>
    <string name="setts_test_type">Default test type – pictures</string>
    <string name="sort">Sort</string>
    <string name="sort_alpha_AZ">alphabet ▼</string>
    <string name="sort_alpha_ZA">alphabet ▲</string>
    <string name="sort_default">default position</string>
    <string name="sort_length_01">name length ▼</string>
    <string name="sort_length_10">name length ▲</string>
    <string name="sort_sf_01">success ▼</string>
    <string name="sort_sf_10">success ▲</string>
    <string name="start">Start</string>
    <string name="test_add">Add source</string>
    <string name="test_size">Tested amount</string>
    <string name="test_time">Duration (s)</string>
    <string name="test_type">Type</string>
</resources>