<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:text="@string/test_type"
                android:textSize="24sp" />

            <ImageSwitcher
                android:id="@+id/test_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginHorizontal="5dp"
            android:background="#5888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:text="@string/test_size"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/test_amount"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="-5dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginHorizontal="5dp"
            android:background="#5888" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:paddingTop="5dp"
                android:text="@string/test_time"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/test_time"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="-5dp"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginHorizontal="5dp"
            android:background="#8888" />

        <TextView
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:drawableStart="@drawable/ic_add"
            android:gravity="center_vertical"
            android:text="@string/test_add"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.6dp"
            android:layout_marginHorizontal="5dp"
            android:background="#8888" />

        <ListView
            android:id="@+id/test_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            tools:listitem="@layout/item_add_test" />

    </LinearLayout>

    <Button
        android:id="@+id/start"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="5dp"
        android:background="#FBBB"
        android:gravity="center"
        android:text="@string/start" />
</FrameLayout>